[package]
name = "grpc_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "todo-server"
path = "src/server.rs"

[[bin]]
name = "todo-client"
path = "src/client.rs"

[dependencies]
tonic = "0.8"
tonic-reflection = "0.5"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8"
